# Inf-Algo

./: .gitignore  README.md
ALGO/Lista 1/: CMakeLists.txt  ex1.c  ex2.c  ex2.py  ex3.c  ex3.py  ex4.c  ex5.cpp  ex6.c  ex7.c  ex8.c
AOD/Lista1/: CMakeLists.txt  Lista1.sln  Lista1.vcxproj  main.cpp
AOD/Lista2/: data.txt  data1.txt  data2.txt  data3.txt  data4.txt  data5.txt  sprawozdaniewip  zad1.jl  zad2.jl  zad3.jl  zad4.jl  zad5.jl
AOD/Lista3/: .gitignore  Lista3.sln  Lista3.vcxproj  USA-road-d.NY.p2p.res  USA-road-d.NY.ss.res  graph_plotter.py  paths_benchmark_results.txt  random4-n-paths-benchmark-results.txt  random4-n-sources-benchmark-results.txt  sources_benchmark_results.txt  square-n-sources-benchmark-results.txt  square_C_paths_benchmark_results.txt  square_C_sources_benchmark_results.txt  square_n_paths_benchmark_results.txt  square_n_sources_benchmark_results.txt  test  usa-road-d-sources-benchmark-results.txt
AOD/Lista4/: .gitignore  Lista4.sln  Lista4.vcxproj
JFTT/Lista 1/: lista1.cpp
JFTT/Lista 2/: a.out  ex1.c  ex1.l  ex2.c  ex2.l  ex3.c  ex3.l  ex4.c  ex4.l  test1  test1wynik  test2wynik.py  test3.cpp  test3wynik.cpp  test4  wynik3.cpp
KiKD/Lista 1/: Dziady.txt  Kordian.txt  lista1.cpp
KiKD/Lista 2/: kkdlista2.cpp
KiKD/Lista 5/: main.cpp
KiKD/Lista 6/: Decoder.cpp  DictionaryTree.cpp  Encoder.cpp  main.cpp
KiKD/Lista 7/: Makefile  check.cpp  decode.cpp  encode.cpp  noise.cpp
ON/Lista 1/: ex1.jl  ex2.jl  ex3.jl  ex4.jl  ex5.jl  ex6.jl  ex7.jl
ON/Lista 2/: ex1.jl  ex3.jl  ex4.jl  ex5.jl  (+1 more)
PZ/: calculator.yaml
WM/: learn.hs
(+385 files in other folders)
