cmake_minimum_required(VERSION 3.26)
project(Lista1 C)

set(CMAKE_C_STANDARD 11)

add_executable(Lista1_1 ex1.c)
add_executable(Lista1_2 ex2.c)
add_executable(Lista1_3 ex3.c)
add_executable(Lista1_4 ex4.c)
#add_executable(Lista1_5 ex5.c)
add_executable(Lista1_6 ex6.c)
add_executable(Lista1_7 ex7.c)
add_executable(Lista1_8 ex8.c)
